--- a/pyramid-slide.html
+++ b/pyramid-slide.html
@@ -1,39 +1,37 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="pyramid-slide.css">
-  </head>
-  <body>
-    <h1 id="header">Pyramid Slide</h1>
-    <div id="workarea">
-      <div id="toolbar">
-        <div class="toolcontrol">
-          Brick Symbol:
-          <select id="brick">
-            <option value="#">#</option>
-            <option value="@">@</option>
-            <option value="X">X</option>
-            <option value="$">$</option>
-          </select>
-        </div>
-
-        <div class="toolcontrol">
-          How high? 
+    <head>
+        <link rel="stylesheet" type="text/css" href="pyramid-slide.css">
+    </head>
+    <body>
+        <h1 id="header">Pyramid Slide</h1>
+        <div id="workarea">
+            <div id="toolbar">
+                <div class="toolcontrol">
+                    Brick Symbol:
+                    <select id="brick">
+                        <option value="#">#</option>
+                        <option value="@">@</option>
+                        <option value="X">X</option>
+                        <option value="$">$</option>
+                    </select>
+                </div>
+                <div class="toolcontrol">
+                    How high? 
           <input type="range" id="heightInput" value="8" min="1" max="20" step="1"></input>
-          <span id="heightOutput">1</span>
+                    <span id="heightOutput">1</span>
+                </div>
+            </div>
+            <div id="container">
+                <!-- Our pyramid will go inside here -->
+                <div id="construction">
+                    <p>Uh oh! the pyramid is still under construction.</p>
+                    <p>Check back again soon... our developers are hard at wrk as we speak!</p>
+                </div>
+            </div>
         </div>
-      </div>
-
-      <div id="container">
-        <!-- Our pyramid will go inside here -->
-        <div id="construction">
-          <p>Uh oh! the pyramid is still under construction.</p>
-          <p>Check back again soon... our developers are hard at wrk as we speak!</p>
-        </div>
-      </div>
-
-    </div>
-    <script src="printPyramid.js"></script>
-    <script src="setup.js"></script>
-  </body>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+        <script src="printPyramid.js"></script>
+        <script src="setup.js"></script>
+    </body>
 </html>
